# otto

./: .gitignore  README.md
aithena_chat/: README.md  aithena-services.code-workspace  cdevin.code-workspace  create_background.py  generate_all_icons.sh  pubspec.yaml  run-web.sh
aithena_chat/android/app/: build.gradle
aithena_chat/ios/Runner/: Info.plist
aithena_chat/ios/Runner.xcodeproj/: project.pbxproj
aithena_chat/lib/: main.dart
aithena_chat/lib/config/: env_config.dart  js_util_stub.dart
aithena_chat/linux/: CMakeLists.txt
aithena_chat/macos/: custom_icon_generator.sh  generate_icons.sh
aithena_chat/web/: index.html  manifest.json
backend/: compose.yml  config.yaml
backend/mongython/: .env.sample  .gitignore  README.md  pyproject.toml
backend/mongython/src/mongython/: cli.py
backend/mongython/src/mongython/api/: __init__.py  app.py  chat.py  conversations.py  db.py  errors.py  models.py  users.py
backend/mongython/src/mongython/models/: base.py  conversation.py  conversation_old.py  llm_model.py  message.py  user.py
backend/mongython/src/mongython/utils/: db_check.py  encryption.py  server_encryption.py
lib/screens/: chat_screen.dart
otto/: .env.template  README.md  create_macos_dmg.sh  create_macos_dmg_simple.sh  flutter_launcher_icons.yaml  generate_all_icons.sh  pubspec.yaml
otto/android/: generate_android_icons.sh  gradle.properties
otto/android/app/: build.gradle
otto/lib/: README.md  main.dart
otto/linux/: CMakeLists.txt
otto/test/: widget_test.dart
otto/web/: index.html  manifest.json
otto/windows/: CMakeLists.txt
(+72 files in other folders)
