[tool.poetry]
name = "mongython"
version = "0.1.0"
description = "MongoDB Backend for Flutter-Otto"
authors = ["Camilo Velez <camilov61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beanie = "^1.29.0"
fastapi = {extras = ["standard"], version = "^0.115.10"}
openai = "^1.65.2"
bcrypt = "^4.3.0"
dotenv = "^0.9.9"
httpx = "^0.27.0"
cryptography = "^43.0.0" # Added for E2EE

[tool.poetry.scripts]
mongython = "mongython.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
